# neurahack-iitm

./: explore.ipynb  main.ipynb  main.py  pyproject.toml
