[project]
name = "neurahack-iitm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autoreject>=0.4.3",
    "matplotlib>=3.10.8",
    "mne>=1.11.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
